tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__CoinsCoinsCoins-AAAAAAAAAAAAAAAAAAAAEA==__FireisCool-AAAAAAAAAAAAAAAAAAAKsw==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2739,
  "prerequisites": [
    225
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Want some more of those fire jets or smoking blocks from TF? Buy some!\n\n[note]You can also make them into redstone controlled versions too![/note]",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Fire is Cool",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": 12000,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    225
  ],
  "rewards": [],
  "tasks": []
}
