tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__CoinsCoinsCoins-AAAAAAAAAAAAAAAAAAAAEA==__GlassyEyed-AAAAAAAAAAAAAAAAAAAHWw==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1883,
  "prerequisites": [
    52
  ],
  "properties": {
    "auto_claim": false,
    "desc": "...from all the mortars you have to use to make glass dust? Have some for a low, low price.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Glassy Eyed",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": 36000,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    52
  ],
  "rewards": [],
  "tasks": []
}
